RESOLVED FIXED236718
REGRESSION: TestWebKitAPI.WKWebViewDisableSelection.DoubleClickDoesNotSelectWhenTextInteractionsAreDisabled is failing
https://bugs.webkit.org/show_bug.cgi?id=236718
Summary REGRESSION: TestWebKitAPI.WKWebViewDisableSelection.DoubleClickDoesNotSelectW...
Truitt Savell
Reported 2022-02-16 10:40:09 PST
TestWebKitAPI.WKWebViewDisableSelection.DoubleClickDoesNotSelectWhenTextInteractionsAreDisabled According to history, it looks like the changes in https://trac.webkit.org/changeset/289818/webkit broke this test. History: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WKWebViewDisableSelection.DoubleClickDoesNotSelectWhenTextInteractionsAreDisabled Diff; TestWebKitAPI.WKWebViewDisableSelection.DoubleClickDoesNotSelectWhenTextInteractionsAreDisabled /Volumes/Data/worker/bigsur-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewDisableSelection.mm:59 Expected equality of these values: "" selectedText2 Which is: "Hello"
Attachments
Patch (1.54 KB, patch)
2022-02-16 15:12 PST, Megan Gardner
no flags
Patch for landing (1.53 KB, patch)
2022-02-16 15:20 PST, Megan Gardner
no flags
Radar WebKit Bug Importer
Comment 1 2022-02-16 10:40:54 PST
Megan Gardner
Comment 2 2022-02-16 15:12:36 PST
Wenson Hsieh
Comment 3 2022-02-16 15:15:16 PST
*** Bug 236737 has been marked as a duplicate of this bug. ***
Wenson Hsieh
Comment 4 2022-02-16 15:18:51 PST
Comment on attachment 452253 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=452253&action=review r=mews > Source/WebCore/ChangeLog:6 > + A check got missed when refactoring code for 289818. Nit - description goes after Reviewed by line.
Megan Gardner
Comment 5 2022-02-16 15:20:06 PST
Created attachment 452255 [details] Patch for landing
EWS
Comment 6 2022-02-16 18:21:05 PST
Committed r289989 (247375@main): <https://commits.webkit.org/247375@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452255 [details].
Note You need to log in before you can comment on or make changes to this bug.