REGRESSION: TestWebKitAPI.WKWebViewDisableSelection.DoubleClickDoesNotSelectWhenTextInteractionsAreDisabled is failing https://bugs.webkit.org/show_bug.cgi?id=236718

Reviewed by Wenson Hsieh.

A check got missed when refactoring code for 289818.

* page/EventHandler.cpp:
(WebCore::EventHandler::handleMousePressEventDoubleClick):



Canonical link: https://commits.webkit.org/247375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289989 268f45cc-cd09-0410-ab3c-d52691b4dbfc